# mdp_RAW

./: .gitignore  README_STRUCTURE.md  analyse_convergence.py  check_progress.sh  cluster_env.txt  environment.yml  eval_norm_nod.py  eval_norm_rod.py  gen_combiner_scripts.sh  launch.slurm  launch_13_first_rod.sh  pyproject.toml  regen_rod_splits.py  test_cagrad.py  test_mgda.py
cluster_scripts/: eval_homo_1_normgrad.sh  eval_homo_2_normgrad.sh  eval_homo_T_cagrad.sh  eval_homo_T_mgda.sh  eval_homo_T_normgrad.sh  eval_homo_T_pcgrad.sh  eval_pair_12_cagrad.sh  eval_pair_12_mgda.sh  eval_pair_12_normgrad.sh  eval_pair_12_pcgrad.sh  eval_pair_12_sum.sh  eval_pair_T1_cagrad.sh  eval_pair_T1_mgda.sh  eval_pair_T1_normgrad.sh  eval_pair_T1_pcgrad.sh  eval_pair_T1_sum.sh  eval_pair_T2_cagrad.sh  eval_pair_T2_mgda.sh  eval_pair_T2_normgrad.sh  eval_pair_T2_pcgrad.sh  eval_solo_1_normgrad.sh  eval_solo_2_normgrad.sh  eval_solo_T_normgrad.sh  eval_triple_cagrad.sh  eval_triple_mgda.sh  eval_triple_normgrad.sh  eval_triple_pcgrad.sh  eval_triple_sum.sh  gen_cluster_scripts.sh  run_homo_1_normgrad.sh  run_homo_2_normgrad.sh  run_homo_T_cagrad.sh  run_homo_T_mgda.sh  run_homo_T_normgrad.sh  run_homo_T_pcgrad.sh  run_pair_12_cagrad.sh  run_pair_12_mgda.sh  run_pair_12_normgrad.sh  run_pair_12_pcgrad.sh  run_pair_12_sum.sh  (+18 more)
core/: adapters.py  adapters.py.bak  combine.py  combine.py.bak  combine.py.bak2  combine.py.bak4  conflict.py  eval_core.py  eval_core.py.bak  evaluate.py  evaluate.py.bak  evaluate.py.bak-valsplit  preprocessor.py  train.py
dataprep/: convert_nod.py  pack_nod.py  (+6 more)
(+250 files in other folders)
